--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <body>
 
 <header>
-    <h1>Bunkers HillBillys (A)</h1>
+    <h1>Horseshoe Inn (Victory Club) (A)</h1>
 </header>
 
     <!-- Table for Player Results -->
@@ -88,64 +88,64 @@
     <tbody>
         <tr>
             <td>1</td>
-            <td>Michael Urbacz</td>
+            <td>Matt Keys</td>
             <td>Lost</td>
         </tr>
         <tr>
             <td>2</td>
-            <td>Dean Nixon</td>
-            <td>Won</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>Matt Keys</td>
-            <td>Won</td>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>Dale Nix</td>
-            <td>Won</td>
-        </tr>
-        <tr>
-            <td>5</td>
-            <td>Blake Nixon</td>
-            <td>Lost</td>
-        </tr>
-        <tr>
-            <td>6</td>
-            <td>Andy Saxton/Dean Nixon</td>
-            <td>Lost</td>
-        </tr>
-        <tr>
-            <td>7</td>
-            <td>Dale Nix</td>
-            <td>Won</td>
-        </tr>
-        <tr>
-            <td>8</td>
-            <td>Andy Saxton</td>
-            <td>Won</td>
-        </tr>
-        <tr>
-            <td>9</td>
             <td>Michael Urbacz</td>
             <td>Won</td>
         </tr>
         <tr>
+            <td>3</td>
+            <td>Wich</td>
+            <td>Lost</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Andy Saxton</td>
+            <td>Won</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>Dale Nix</td>
+            <td>Won</td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>James Stevens/William Neville</td>
+            <td>Lost</td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td>Carl Bilbey</td>
+            <td>Lost</td>
+        </tr>
+        <tr>
+            <td>8</td>
+            <td>Dean Nixon</td>
+            <td>Won</td>
+        </tr>
+        <tr>
+            <td>9</td>
+            <td>Blake Nixon</td>
+            <td>Lost</td>
+        </tr>
+        <tr>
             <td>10</td>
-            <td>-</td>
-            <td>-</td>
+            <td>Andy Saxton</td>
+            <td>Won</td>
         </tr>
         <tr>
             <td>11</td>
-            <td>-</td>
-            <td>-</td>
+            <td>Dale Nix</td>
+            <td>Lost</td>
         </tr>
     </tbody>
 </table>
 
 <section>
-    <div class="sub-header"><strong>Final Result:</strong><br>Won 6 - 3</div>
+    <div class="sub-header"><strong>Final Result:</strong><br>Lost 5 - 6</div>
 </section>
 
 <section>
@@ -156,6 +156,7 @@
 </body>
 
 </html>
+
 
 
 
